src/objdetect/objdetect.h

void     HOGDescriptor_Close(HOGDescriptorPtr self);
CvStatus HOGDescriptor_Detect(HOGDescriptor self, Mat img, VecPoint *foundLocations, VecDouble *weights,
                              double hitThresh, Size winStride, Size padding, VecPoint *searchLocations);
CvStatus HOGDescriptor_Detect2(HOGDescriptor self, Mat img, VecPoint *foundLocations, double hitThresh,
                               Size winStride, Size padding, VecPoint *searchLocations);
CvStatus HOGDescriptor_Compute(HOGDescriptor self, Mat img, VecFloat *descriptors, Size winStride,
                               Size padding, VecPoint *locations);
CvStatus GroupRectangles(VecRect rects, int groupThreshold, double eps);
// FaceRecognizerSF
CvStatus FaceRecognizerSF_New(const char *model, const char *config, int backend_id, int target_id,
                              FaceRecognizerSF *rval);
void     FaceRecognizerSF_Close(FaceRecognizerSFPtr self);
CvStatus FaceRecognizerSF_AlignCrop(FaceRecognizerSF self, Mat src_img, Mat face_box, Mat *aligned_img);
CvStatus FaceRecognizerSF_Feature(FaceRecognizerSF self, Mat aligned_img, bool clone, Mat *face_feature);
CvStatus FaceRecognizerSF_Match(FaceRecognizerSF self, Mat face_feature1, Mat face_feature2, int dis_type,
                                double *distance);