packages/dartcv/lib/src/g/objdetect.g.dart


  ffi.Pointer<CvStatus> FaceRecognizerSF_AlignCrop(
    FaceRecognizerSF self,
    Mat src_img,
    Mat face_box,
    ffi.Pointer<Mat> aligned_img,
  ) {
    return _FaceRecognizerSF_AlignCrop(
      self,
      src_img,
      face_box,
      aligned_img,
    );
  }

  late final _FaceRecognizerSF_AlignCropPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(FaceRecognizerSF, Mat, Mat,
              ffi.Pointer<Mat>)>>('FaceRecognizerSF_AlignCrop');
  late final _FaceRecognizerSF_AlignCrop =
      _FaceRecognizerSF_AlignCropPtr.asFunction<
          ffi.Pointer<CvStatus> Function(
              FaceRecognizerSF, Mat, Mat, ffi.Pointer<Mat>)>();

  ffi.Pointer<CvStatus> FaceRecognizerSF_AlignCrop_Async(
    FaceRecognizerSF self,
    Mat src_img,
    Mat face_box,
    imp1.CvCallback_1 callback,
  ) {
    return _FaceRecognizerSF_AlignCrop_Async(
      self,
      src_img,
      face_box,
      callback,
    );
  }

  late final _FaceRecognizerSF_AlignCrop_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(FaceRecognizerSF, Mat, Mat,
              imp1.CvCallback_1)>>('FaceRecognizerSF_AlignCrop_Async');
  late final _FaceRecognizerSF_AlignCrop_Async =
      _FaceRecognizerSF_AlignCrop_AsyncPtr.asFunction<
          ffi.Pointer<CvStatus> Function(
              FaceRecognizerSF, Mat, Mat, imp1.CvCallback_1)>();

  void FaceRecognizerSF_Close(
    FaceRecognizerSFPtr self,
  ) {
    return _FaceRecognizerSF_Close(
      self,
    );
  }

  late final _FaceRecognizerSF_ClosePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(FaceRecognizerSFPtr)>>(
          'FaceRecognizerSF_Close');
  late final _FaceRecognizerSF_Close = _FaceRecognizerSF_ClosePtr.asFunction<
      void Function(FaceRecognizerSFPtr)>();

  ffi.Pointer<CvStatus> FaceRecognizerSF_Feature(
    FaceRecognizerSF self,
    Mat aligned_img,
    bool clone,
    ffi.Pointer<Mat> face_feature,
  ) {
    return _FaceRecognizerSF_Feature(
      self,
      aligned_img,
      clone,
      face_feature,
    );
  }

  late final _FaceRecognizerSF_FeaturePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(FaceRecognizerSF, Mat, ffi.Bool,
              ffi.Pointer<Mat>)>>('FaceRecognizerSF_Feature');
  late final _FaceRecognizerSF_Feature =
      _FaceRecognizerSF_FeaturePtr.asFunction<
          ffi.Pointer<CvStatus> Function(
              FaceRecognizerSF, Mat, bool, ffi.Pointer<Mat>)>();

  ffi.Pointer<CvStatus> FaceRecognizerSF_Feature_Async(
    FaceRecognizerSF self,
    Mat aligned_img,
    bool clone,
    imp1.CvCallback_1 callback,
  ) {
    return _FaceRecognizerSF_Feature_Async(
      self,
      aligned_img,
      clone,
      callback,
    );
  }

  late final _FaceRecognizerSF_Feature_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(FaceRecognizerSF, Mat, ffi.Bool,
              imp1.CvCallback_1)>>('FaceRecognizerSF_Feature_Async');
  late final _FaceRecognizerSF_Feature_Async =
      _FaceRecognizerSF_Feature_AsyncPtr.asFunction<
          ffi.Pointer<CvStatus> Function(
              FaceRecognizerSF, Mat, bool, imp1.CvCallback_1)>();

  ffi.Pointer<CvStatus> FaceRecognizerSF_Match(
    FaceRecognizerSF self,
    Mat face_feature1,
    Mat face_feature2,
    int dis_type,
    ffi.Pointer<ffi.Double> distance,
  ) {
    return _FaceRecognizerSF_Match(
      self,
      face_feature1,
      face_feature2,
      dis_type,
      distance,
    );
  }

  late final _FaceRecognizerSF_MatchPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(FaceRecognizerSF, Mat, Mat, ffi.Int,
              ffi.Pointer<ffi.Double>)>>('FaceRecognizerSF_Match');
  late final _FaceRecognizerSF_Match = _FaceRecognizerSF_MatchPtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          FaceRecognizerSF, Mat, Mat, int, ffi.Pointer<ffi.Double>)>();

  ffi.Pointer<CvStatus> FaceRecognizerSF_Match_Async(
    FaceRecognizerSF self,
    Mat face_feature1,
    Mat face_feature2,
    int dis_type,
    imp1.CvCallback_1 callback,
  ) {
    return _FaceRecognizerSF_Match_Async(
      self,
      face_feature1,
      face_feature2,
      dis_type,
      callback,
    );
  }

  late final _FaceRecognizerSF_Match_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(FaceRecognizerSF, Mat, Mat, ffi.Int,
              imp1.CvCallback_1)>>('FaceRecognizerSF_Match_Async');
  late final _FaceRecognizerSF_Match_Async =
      _FaceRecognizerSF_Match_AsyncPtr.asFunction<
          ffi.Pointer<CvStatus> Function(
              FaceRecognizerSF, Mat, Mat, int, imp1.CvCallback_1)>();

  ffi.Pointer<CvStatus> FaceRecognizerSF_New(
    ffi.Pointer<ffi.Char> model,
    ffi.Pointer<ffi.Char> config,
    int backend_id,
    int target_id,
    ffi.Pointer<FaceRecognizerSF> rval,
  ) {
    return _FaceRecognizerSF_New(
      model,
      config,
      backend_id,
      target_id,
      rval,
    );
  }

  late final _FaceRecognizerSF_NewPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Int,
              ffi.Int,
              ffi.Pointer<FaceRecognizerSF>)>>('FaceRecognizerSF_New');
  late final _FaceRecognizerSF_New = _FaceRecognizerSF_NewPtr.asFunction<
      ffi.Pointer<CvStatus> Function(ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>, int, int, ffi.Pointer<FaceRecognizerSF>)>();

  ffi.Pointer<CvStatus> FaceRecognizerSF_New_Async(
    ffi.Pointer<ffi.Char> model,
    ffi.Pointer<ffi.Char> config,
    int backend_id,
    int target_id,
    imp1.CvCallback_1 callback,
  ) {
    return _FaceRecognizerSF_New_Async(
      model,
      config,
      backend_id,
      target_id,
      callback,
    );
  }

  late final _FaceRecognizerSF_New_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Int,
              ffi.Int,
              imp1.CvCallback_1)>>('FaceRecognizerSF_New_Async');
  late final _FaceRecognizerSF_New_Async =
      _FaceRecognizerSF_New_AsyncPtr.asFunction<
          ffi.Pointer<CvStatus> Function(ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>, int, int, imp1.CvCallback_1)>();

  ffi.Pointer<CvStatus> GroupRectangles(
    ffi.Pointer<VecRect> rects,
    int groupThreshold,
    double eps,
  ) {
    return _GroupRectangles(
      rects,
      groupThreshold,
      eps,
    );
  }

  late final _GroupRectanglesPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              ffi.Pointer<VecRect>, ffi.Int, ffi.Double)>>('GroupRectangles');
  late final _GroupRectangles = _GroupRectanglesPtr.asFunction<
      ffi.Pointer<CvStatus> Function(ffi.Pointer<VecRect>, int, double)>();

  ffi.Pointer<CvStatus> GroupRectangles_Async(
    ffi.Pointer<VecRect> rects,
    int groupThreshold,
    double eps,
    imp1.CvCallback_0 callback,
  ) {
    return _GroupRectangles_Async(
      rects,
      groupThreshold,
      eps,
      callback,
    );
  }

  late final _GroupRectangles_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(ffi.Pointer<VecRect>, ffi.Int,
              ffi.Double, imp1.CvCallback_0)>>('GroupRectangles_Async');
  late final _GroupRectangles_Async = _GroupRectangles_AsyncPtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          ffi.Pointer<VecRect>, int, double, imp1.CvCallback_0)>();

  void HOGDescriptor_Close(
    HOGDescriptorPtr self,
  ) {
    return _HOGDescriptor_Close(
      self,
    );
  }

  late final _HOGDescriptor_ClosePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(HOGDescriptorPtr)>>(
          'HOGDescriptor_Close');
  late final _HOGDescriptor_Close =
      _HOGDescriptor_ClosePtr.asFunction<void Function(HOGDescriptorPtr)>();

  ffi.Pointer<CvStatus> HOGDescriptor_Compute(
    HOGDescriptor self,
    Mat img,
    ffi.Pointer<VecF32> descriptors,
    CvSize winStride,
    CvSize padding,
    ffi.Pointer<VecPoint> locations,
  ) {
    return _HOGDescriptor_Compute(
      self,
      img,
      descriptors,
      winStride,
      padding,
      locations,
    );
  }

  late final _HOGDescriptor_ComputePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              HOGDescriptor,
              Mat,
              ffi.Pointer<VecF32>,
              CvSize,
              CvSize,
              ffi.Pointer<VecPoint>)>>('HOGDescriptor_Compute');
  late final _HOGDescriptor_Compute = _HOGDescriptor_ComputePtr.asFunction<
      ffi.Pointer<CvStatus> Function(HOGDescriptor, Mat, ffi.Pointer<VecF32>,
          CvSize, CvSize, ffi.Pointer<VecPoint>)>();

  ffi.Pointer<CvStatus> HOGDescriptor_Compute_Async(
    HOGDescriptor self,
    Mat img,
    CvSize winStride,
    CvSize padding,
    imp1.CvCallback_2 callback,
  ) {
    return _HOGDescriptor_Compute_Async(
      self,
      img,
      winStride,
      padding,
      callback,
    );
  }

  late final _HOGDescriptor_Compute_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(HOGDescriptor, Mat, CvSize, CvSize,
              imp1.CvCallback_2)>>('HOGDescriptor_Compute_Async');
  late final _HOGDescriptor_Compute_Async =
      _HOGDescriptor_Compute_AsyncPtr.asFunction<
          ffi.Pointer<CvStatus> Function(
              HOGDescriptor, Mat, CvSize, CvSize, imp1.CvCallback_2)>();

  ffi.Pointer<CvStatus> HOGDescriptor_Detect(
    HOGDescriptor self,
    Mat img,
    ffi.Pointer<VecPoint> foundLocations,
    ffi.Pointer<VecF64> weights,
    double hitThresh,
    CvSize winStride,
    CvSize padding,
    ffi.Pointer<VecPoint> searchLocations,
  ) {
    return _HOGDescriptor_Detect(
      self,
      img,
      foundLocations,
      weights,
      hitThresh,
      winStride,
      padding,
      searchLocations,
    );
  }

  late final _HOGDescriptor_DetectPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              HOGDescriptor,
              Mat,
              ffi.Pointer<VecPoint>,
              ffi.Pointer<VecF64>,
              ffi.Double,
              CvSize,
              CvSize,
              ffi.Pointer<VecPoint>)>>('HOGDescriptor_Detect');
  late final _HOGDescriptor_Detect = _HOGDescriptor_DetectPtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          HOGDescriptor,
          Mat,
          ffi.Pointer<VecPoint>,
          ffi.Pointer<VecF64>,
          double,
          CvSize,
          CvSize,
          ffi.Pointer<VecPoint>)>();

  ffi.Pointer<CvStatus> HOGDescriptor_Detect2(
    HOGDescriptor self,
    Mat img,
    ffi.Pointer<VecPoint> foundLocations,
    double hitThresh,
    CvSize winStride,
    CvSize padding,
    ffi.Pointer<VecPoint> searchLocations,
  ) {
    return _HOGDescriptor_Detect2(
      self,
      img,
      foundLocations,
      hitThresh,
      winStride,
      padding,
      searchLocations,
    );
  }

  late final _HOGDescriptor_Detect2Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              HOGDescriptor,
              Mat,
              ffi.Pointer<VecPoint>,
              ffi.Double,
              CvSize,
              CvSize,
              ffi.Pointer<VecPoint>)>>('HOGDescriptor_Detect2');
  late final _HOGDescriptor_Detect2 = _HOGDescriptor_Detect2Ptr.asFunction<
      ffi.Pointer<CvStatus> Function(HOGDescriptor, Mat, ffi.Pointer<VecPoint>,
          double, CvSize, CvSize, ffi.Pointer<VecPoint>)>();

  ffi.Pointer<CvStatus> HOGDescriptor_Detect2_Async(
    HOGDescriptor self,
    Mat img,
    double hitThresh,
    CvSize winStride,
    CvSize padding,
    imp1.CvCallback_2 callback,
  ) {
    return _HOGDescriptor_Detect2_Async(
      self,
      img,
      hitThresh,
      winStride,
      padding,
      callback,
    );
  }
